[project]
name = "homeassistant-coolblue-energy"
version = "0.1.3"
description = "Integration to connect Home Assistant with Coolblue Energy"
authors = ["Baris Demirdelen <barisdemirdelen@gmail.com>"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "homeassistant>=2026.2.3",
    "pydantic>=2.12.5",
    "yarl>=1.22.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]
